search bar implemented,buttons alignment fixed for small screens

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -52,13 +52,18 @@ main {
   left: 0;
   margin: 20px 20px 0px 20px;
   height: 100%;
+  min-height: 70vh;
+
 
   nav {
     display: Flex;
     flex-wrap: wrap;
     margin: 20px 0px;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    gap:1rem;
   }
+
+
 
   button {
     background: var(--Cyan);
@@ -81,6 +86,36 @@ main {
     }
   }
 }
+svg {
+  width:2rem;
+  height:1.5rem;
+  margin-left:-2rem;
+  margin-top: 1rem;
+}
+
+.search {
+  margin-top: 2rem;
+  width:100%;
+  height:15%;
+  display:flex;
+  justify-content:center;
+ 
+}
+
+.search input{
+  width:80%;
+  height:3rem;
+  border-radius: 0.3rem;
+  border:none;
+  font-size: 1rem;
+  padding:0.5rem;
+
+  &:focus{
+    outline:none;
+  }
+}
+
+
 
 .more-button{
   width:180px;
